# clicoin

./: .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  configure.ac  libclicoinconsensus.pc.in
.tx/: config
build-aux/m4/: clicoin_find_bdb48.m4  clicoin_qt.m4  clicoin_subdir_to_include.m4
contrib/: README.md  clicoin-qt.pro  clicoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  changelog  clicoin-qt.desktop  clicoin-qt.install  clicoin-qt.lintian-overrides  control  (+10 more)
depends/: README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.cpp  alert.h  amount.cpp  amount.h  arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  bloom.cpp  bloom.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.cpp  checkpoints.h  checkqueue.h  clicoin-cli-res.rc  clicoin-cli.cpp  clicoin-tx-res.rc  clicoin-tx.cpp  clicoind-res.rc  clicoind.cpp  clientversion.cpp  clientversion.h  coincontrol.h  coins.cpp  coins.h  compat.h  compressor.cpp  compressor.h  (+83 more)
src/bench/: .gitignore  Examples.cpp  bench.cpp  bench.h  bench_clicoin.cpp
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha512.cpp  sha512.h
src/policy/: fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  clicoin.cpp  clicoin.qrc  clicoin_locale.qrc  clicoinaddressvalidator.cpp  clicoinaddressvalidator.h  clicoinamountfield.cpp  clicoinamountfield.h  clicoingui.cpp  clicoingui.h  clicoinstrings.cpp  clicoinunits.cpp  clicoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  (+66 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: clicoin_af_ZA.ts  clicoin_ar.ts  clicoin_be_BY.ts  clicoin_bg.ts  clicoin_bg_BG.ts  clicoin_bs.ts  clicoin_ca.ts  clicoin_ca@valencia.ts  clicoin_ca_ES.ts  clicoin_cs.ts  clicoin_cs_CZ.ts  clicoin_cy.ts  clicoin_da.ts  clicoin_de.ts  clicoin_el.ts  clicoin_el_GR.ts  clicoin_en.ts  clicoin_en_GB.ts  clicoin_eo.ts  clicoin_es.ts  clicoin_es_CL.ts  clicoin_es_DO.ts  clicoin_es_ES.ts  clicoin_es_MX.ts  clicoin_es_UY.ts  clicoin_es_VE.ts  clicoin_et.ts  clicoin_eu_ES.ts  clicoin_fa.ts  clicoin_fa_IR.ts  clicoin_fi.ts  clicoin_fr.ts  clicoin_fr_CA.ts  clicoin_fr_FR.ts  clicoin_gl.ts  clicoin_he.ts  clicoin_hi_IN.ts  clicoin_hr.ts  clicoin_hu.ts  clicoin_id_ID.ts  (+37 more)
src/qt/res/: clicoin-qt-res.rc
src/qt/res/icons/: clicoin.xcf
src/qt/test/: paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: clicoinconsensus.cpp  clicoinconsensus.h  interpreter.cpp  interpreter.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_clicoin_NativeSecp256k1.c  org_clicoin_NativeSecp256k1.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java
src/support/: cleanse.cpp  cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  clicoin-util-test.py  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  (+15 more)
src/test/data/: README.md  clicoin-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.cpp  crypter.h  db.cpp  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.cpp  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.cpp  zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.cpp  zmqnotificationinterface.h  zmqpublishnotifier.cpp  zmqpublishnotifier.h
(+199 files in other folders)
